Modify valentine message and button styles
Updated text content and button size in index.html.

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
       left: 18%;
       background: var(--yes);
       color: #fff;
+      size: 400px;
     }
     #yesBtn:hover { background: var(--yesHover); }
 
@@ -171,7 +172,7 @@
             fill="#ff7aa2"/>
     </svg>
 
-    <h1>nirali will you be my valentine?</h1>
+    <h1>Sophie Charlotte Acraman will you be my valentine?</h1>
 
     <section class="button-zone" id="zone">
       <button id="yesBtn">Yes</button>
@@ -179,13 +180,13 @@
     </section>
 
     <!-- HINT -->
-    <div class="hint" id="hint">“No” seems a bit shy 😈</div>
+    <div class="hint" id="hint">How dare you even think about saying "No" 😠</div>
 
     <section class="result" id="result">
-      <h2>YAY! 🎉</h2>
+      <h2>YAYAYAYAYYAYAYAY! 🎉</h2>
       <img
         class="fireworks"
-        src="https://media.giphy.com/media/26ufdipQqU2lhNA4g/giphy.gif"
+        src="https://giphy.com/explore/yippy"
         alt="Fireworks"
       />
     </section>
