Update fireworks image source in index.html

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       <h2>YAYAYAYAYYAYAYAY! 🎉</h2>
       <img
         class="fireworks"
-        src="https://giphy.com/explore/yippy"
+        src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExdXlkN3QyeWR4enFweHppeDR1NzQyaTd0aGd4MXQ5cnQ5djdlbmRoeiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/lOPJZITKZYLiU3cfGl/giphy.gif"
         alt="Fireworks"
       />
     </section>
